[20200609 임희선] 탭 이미지 설정

--- a/frontend/mycareer/public/index.html
+++ b/frontend/mycareer/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/2092392.ico" />
 
     <!-- 폰트 링크 -->
     <link
